# comfyui-nodes-docs

./: .gitignore  CHANGELOG.md  README.md  README_en.md  README_zh.md  package-lock.json  package.json  pyproject.toml  retrofit_source_block.js  translate_test_run.js  translate_with_router.js
docs/: 3DImage_en.md  ACN_AdvancedControlNetApply_en.md  ACN_DefaultUniversalWeights_en.md  ACN_ReferenceControlNetFinetune_en.md  ACN_ReferenceControlNet_en.md  ACN_ReferencePreprocessor_en.md  ACN_SparseCtrlIndexMethodNode_en.md  ACN_SparseCtrlLoaderAdvanced_en.md  ACN_SparseCtrlMergedLoaderAdvanced_en.md  ACN_SparseCtrlRGBPreprocessor_en.md  ACN_SparseCtrlSpreadMethodNode_en.md  ADE_AdjustPEFullStretch_en.md  ADE_AdjustPEManual_en.md  ADE_AdjustPESweetspotStretch_en.md  ADE_AdjustWeightAllAdd_en.md  ADE_AdjustWeightAllMult_en.md  ADE_AdjustWeightIndivAdd_en.md  ADE_AdjustWeightIndivAttnAdd_en.md  ADE_AdjustWeightIndivAttnMult_en.md  ADE_AdjustWeightIndivMult_en.md  ADE_AnimateDiffCombine_en.md  ADE_AnimateDiffKeyframe_en.md  ADE_AnimateDiffLoRALoader_en.md  ADE_AnimateDiffLoaderGen1_en.md  ADE_AnimateDiffLoaderV1Advanced_en.md  ADE_AnimateDiffLoaderWithContext_en.md  ADE_AnimateDiffModelSettingsAdvancedAttnStrengths_en.md  ADE_AnimateDiffModelSettingsSimple_en.md  ADE_AnimateDiffModelSettings_Release_en.md  ADE_AnimateDiffModelSettings_en.md  ADE_AnimateDiffSamplingSettings_en.md  ADE_AnimateDiffSettings_en.md  ADE_AnimateDiffUniformContextOptions_en.md  ADE_AnimateDiffUnload_en.md  ADE_ApplyAnimateDiffModelSimple_en.md  ADE_ApplyAnimateDiffModelWithCameraCtrl_en.md  ADE_ApplyAnimateDiffModel_en.md  ADE_ApplyAnimateLCMI2VModel_en.md  ADE_AttachLoraHookToCLIP_en.md  ADE_AttachLoraHookToConditioning_en.md  (+3442 more)
server/: request.py
web/comfyui/: creatDocsElement.js
